Fix layout issue on firefox

--- a/css/chat-list-page.css
+++ b/css/chat-list-page.css
@@ -218,7 +218,8 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  flex: 1;
+  flex: 1 auto;
+  height: 0;
 }
 
 .Chat .comment-list-container ul {
